--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <button id="book">New Book</button>
+    <dialog id="form">
+        <form action="example.com/path">
+            <label for="title">Title:</label>
+            <input type="text" name="title" id="title">
+
+            <label for="author">Author:</label>
+            <input type="text" name="author" id="author">
+
+            <label for="pages">Pages:</label>
+            <input type="text" name="pages" id="pages">
+
+            <label for="read">Have You Read It?</label>
+            <select name="read">
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+            </select>
+
+            <button type="submit" id="submit">Submit</button>
+        </form>
+    </dialog>
     <div class="grid"></div>
 </body>
 </html>
