--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <option value="no">No</option>
             </select>
 
-            <button type="submit" id="submit">Submit</button>
+            <button id="submit" formmethod="dialog">Submit</button>
         </form>
     </dialog>
     <div class="grid"></div>
