--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <button id="book">New Book</button>
-    <dialog id="form">
-        <form action="example.com/path">
+    <dialog id="dialog">
+        <form id="form">
             <label for="title">Title:</label>
             <input type="text" name="title" id="title">
 
@@ -21,12 +21,12 @@
             <input type="text" name="pages" id="pages">
 
             <label for="read">Have You Read It?</label>
-            <select name="read">
+            <select id="read">
                 <option value="yes">Yes</option>
                 <option value="no">No</option>
             </select>
 
-            <button id="submit" formmethod="dialog">Submit</button>
+            <button id="submit">Submit</button>
         </form>
     </dialog>
     <div class="grid"></div>
